[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pdm_template"
dynamic = ["version"]
description = "A python project template"
authors = [
    { name = "Yann de Thé", email = "yann@johncloud.fr" },
]
dependencies = [
    "git-changelog>=1.0",
]
requires-python = ">=3.9"

[project.urls]
"Bug Tracker" = "https://github.com/ydethe/pdm_template/issues"
Homepage = "https://github.com/ydethe/pdm_template"
Source = "https://github.com/ydethe/pdm_template"

[tool.pylint.format]
max-line-length = 100

[tool.black]
line-length = 100

[project.scripts]
check-changelog = "pdm_template.check_changelog:main"
extract-todo = "pdm_template.extract_todo:main"
fix-doc = "pdm_template.fix_doc:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--html=htmldoc/tests/report.html",
    "--self-contained-html",
    "--junitxml=htmldoc/junit.xml",
    # "--keep-copied-projects"
]
testpaths = [
    "tests/",
]

[tool.pdm.version]
source = "scm"

[dependency-groups]
dev = [
    "coverage-badge>=1.1.0",
    "ipython~=7.23.1",
    "pre-commit",
    "snakeviz>=2.1.2",
]
maintain = [
    "black==22.3.0",
    "blacken-docs==1.12.1",
]
quality = [
    "mypy>=1.2.0",
    "ruff>=0.0.246",
]
doc = [
    "pdoc3~=0.10.0",
]
test = [
    "pytest-copie>=0.1.6",
    "pytest-cov~=3.0.0",
    "pytest-html~=3.1.1",
    "pytest-instafail~=0.4.2",
    "pytest-mock~=3.8.2",
    "pytest-picked~=0.4.6",
    "pytest-sugar~=0.9.5",
    "pytest~=7.1.3",
]

# [tool.pdm.scripts]
# doc.shell = """\
#     mkdir -p htmldoc/pdm_template
#     pdoc --html --force --config latex_math=True -o htmldoc pdm_template
#     coverage html -d htmldoc/coverage
#     docstr-coverage pdm_template -miP -sp -is -idel --skip-file-doc --exclude ".*/kt.*.py" --badge=htmldoc/doc_badge.svg
#     coverage-badge -f -o htmldoc/cov_badge.svg
#     fix-doc
# """
